[gd_scene load_steps=14 format=3 uid="uid://deg7fdp00k301"]

[ext_resource type="Script" path="res://entities/towers/penguins/snowbomber.gd" id="1_w8hj7"]
[ext_resource type="Texture2D" uid="uid://c2m8dbw2kae7w" path="res://assets/towers/64x64_triangle_white.png" id="2_ovywx"]
[ext_resource type="Texture2D" uid="uid://obhi2r8e71sk" path="res://assets/towers/64x64_triangle_red.png" id="3_tos6g"]
[ext_resource type="Script" path="res://components/aim_component.gd" id="4_2ioa7"]
[ext_resource type="PackedScene" uid="uid://gk1h0f4x6sv7" path="res://components/attack_component.tscn" id="5_yyj5w"]
[ext_resource type="PackedScene" uid="uid://ogvd8jfqcpdu" path="res://entities/projectiles/snowbomb.tscn" id="6_tjw58"]
[ext_resource type="PackedScene" uid="uid://boec0e7ocyg1x" path="res://components/hitbox_component.tscn" id="7_un2iw"]
[ext_resource type="PackedScene" uid="uid://dfoiwki34li5c" path="res://components/range_component.tscn" id="8_4dy7e"]
[ext_resource type="Script" path="res://components/targeting_component.gd" id="9_6r61v"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cawe3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ovywx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_tos6g")
}, {
"duration": 1.0,
"texture": ExtResource("3_tos6g")
}, {
"duration": 1.0,
"texture": ExtResource("3_tos6g")
}, {
"duration": 1.0,
"texture": ExtResource("3_tos6g")
}, {
"duration": 1.0,
"texture": ExtResource("3_tos6g")
}, {
"duration": 1.0,
"texture": ExtResource("3_tos6g")
}],
"loop": true,
"name": &"throw",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1q27x"]
radius = 33.0

[sub_resource type="CircleShape2D" id="CircleShape2D_64kx8"]
radius = 33.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fbopt"]
radius = 250.0

[node name="Snowbomber" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_w8hj7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
sprite_frames = SubResource("SpriteFrames_cawe3")
animation = &"idle"
autoplay = "idle"

[node name="Muzzle" type="Marker2D" parent="AnimatedSprite2D"]
position = Vector2(32, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1q27x")

[node name="AimComponent" type="RayCast2D" parent="." node_paths=PackedStringArray("targeting_component")]
target_position = Vector2(270, 0)
script = ExtResource("4_2ioa7")
rotation_speed = 100.0
targeting_component = NodePath("../TargetingComponent")

[node name="AttackComponent" parent="." node_paths=PackedStringArray("attacker", "animated_sprite", "aim_component") instance=ExtResource("5_yyj5w")]
attacker = NodePath("..")
rate_of_fire = 3.0
attack_type = ExtResource("6_tjw58")
projectile_scale = 0.1
projectile_penetration = 20
animated_sprite = NodePath("../AnimatedSprite2D")
aim_component = NodePath("../AimComponent")

[node name="HitboxComponent" parent="." instance=ExtResource("7_un2iw")]
collision_layer = 2
collision_mask = 2

[node name="Hitbox" parent="HitboxComponent" index="0"]
shape = SubResource("CircleShape2D_64kx8")

[node name="RangeComponent" parent="." instance=ExtResource("8_4dy7e")]
collision_mask = 1

[node name="DetectionRange" parent="RangeComponent" index="0"]
shape = SubResource("CircleShape2D_fbopt")

[node name="TargetingComponent" type="Node2D" parent="." node_paths=PackedStringArray("range_component")]
script = ExtResource("9_6r61v")
range_component = NodePath("../RangeComponent")

[connection signal="animation_finished" from="AnimatedSprite2D" to="AttackComponent" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="attacking" from="AttackComponent" to="." method="_on_attack_component_attacking"]

[editable path="AttackComponent"]
[editable path="HitboxComponent"]
[editable path="RangeComponent"]
